refactor: eliminate the usage of getFirst() and getLast(), for the compatibility of Java 17